fixed login, register and made major changes on authorization (when user logs in, sends message, delete message etc..)its more secure and its faster.changed the authorization page(dark mode).and show users of chats(not complete)

--- a/public/style.css
+++ b/public/style.css
@@ -653,3 +653,8 @@ button{
 #navigation-bar:hover{
     border-bottom: solid 1px var(--border-focus);
 }
+.user-container {
+    width: 100%;
+    height: 50px;
+    display: flex;
+}
